platform/seaweedfs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-admin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: envoy-gateway-system
      sectionName: https-dead-whale
  hostnames:
    - seaweed.dead-whale.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: seaweedfs-admin
          port: 23646
          weight: 1
